# ros2-python-examples

./: README.md
external-projects/: .gitignore  README.md  setup.cfg
external-projects/src/external_libraries/: calculator.py
external-projects/tests/: test_calculator.py
ros2-workspace/: .gitignore  README.md
ros2-workspace/src/simple_client_server/: package.xml  setup.cfg  setup.py
ros2-workspace/src/simple_client_server/simple_client_server/: client.py  service.py
ros2-workspace/src/simple_client_server/test/: test_flake8.py
ros2-workspace/src/simple_pubsub/: package.xml  setup.cfg  setup.py
ros2-workspace/src/simple_pubsub/test/: test_flake8.py
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/install/: local_setup.sh  setup.sh
src/py_pubsub/install/py_pubsub/share/py_pubsub/: package.sh  package.xml
src/py_pubsub/log/: latest_build  latest_test
src/py_pubsub/py_pubsub/: publisher.py  subscriber.py
src/py_pubsub/test/: test_flake8.py
src/py_srvcli/: package.xml  setup.py
