[metadata]
name = external_projects
version = 0.0.1
author = Dr. Matthias Hölzl
author_email = tc@xantira.com
description = An awesome project!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl//ros_core_functions
project_urls =
    Bug Tracker = https://github.com/hoelzl/ros2-python-examples/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    click>=8.0

[options.packages.find]
where=src
